# mixpanel-rs

./: .env.example  Cargo.toml  README.md  devbox.json
examples/: basic.rs  batch.rs  groups.rs  people.rs
src/: error.rs  groups.rs  lib.rs  people.rs  utils.rs
