[package]
name = "mixpanel-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust client for Mixpanel"
license = "MIT"
repository = "https://github.com/ahonn/mixpanel-rs"
readme = "README.md"
keywords = ["mixpanel", "analytics"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
chrono = "0.4"
base64 = "0.21"
url = "2.5"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util", "macros"] }
tokio-test = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
