[workspace]
members = [
  ".",
  "./packages/tauri-plugin-mixpanel"
]

[workspace.package]
version = "0.3.1"
authors = [ "ahonn" ]
license = "MIT"
edition = "2021"

[workspace.dependencies]
mixpanel-rs = { path = ".", version = "0.3.0" }

[package]
name = "mixpanel-rs"
version.workspace = true
authors.workspace = true
description = "A Rust client for Mixpanel"
edition.workspace = true
license.workspace = true
repository = "https://github.com/ahonn/mixpanel-rs"
readme = "README.md"
keywords = ["mixpanel", "analytics"]
categories = ["api-bindings"]

[features]
native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
thiserror = "1.0"
chrono = "0.4"
base64 = "0.21"
url = "2.5"
async-trait = "0.1"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "people"
path = "examples/people.rs"

[[example]]
name = "groups"
path = "examples/groups.rs"
